create config server

--- a/settings.gradle
+++ b/settings.gradle
@@ -2,5 +2,6 @@ rootProject.name = 'nextfeed'
 include 'library'
 include 'service:eureka'
 include 'service:gateway'
+include 'service:config'
 include 'service:survey'
 include 'service:user'
