--- a/service/gateway/src/main/resources/application.yml
+++ b/service/gateway/src/main/resources/application.yml
@@ -27,6 +27,7 @@ eureka:
     serviceUrl:
       defaultZone: ${EUREKA_URI:http://localhost:8000/eureka}
   instance:
+    instanceId: ${spring.application.name}:${random.value}
     hostname: localhost
     preferIpAddress: true
 
