--- a/service/eureka/build.gradle
+++ b/service/eureka/build.gradle
@@ -5,7 +5,7 @@ plugins {
 //    id 'application'
 }
 
-group = 'com.example'
+group = 'com.nextfeed'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = "17"
 
