--- a/service/gateway/build.gradle
+++ b/service/gateway/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'java'
 }
 
-group = 'com.example'
+group = 'com.nextfeed'
 version = '0.0.1-SNAPSHOT'
 targetCompatibility = JavaVersion.VERSION_17
 
