--- a/service/manager/session/build.gradle
+++ b/service/manager/session/build.gradle
@@ -30,24 +30,33 @@ dependencyManagement {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.cloud:spring-cloud-starter-task'
-    implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer'
+//    implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
-    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
-    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix:2.2.10.RELEASE'
+//    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+//    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix:2.2.10.RELEASE'
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
-    implementation 'org.springframework.cloud:spring-cloud-starter'
-    implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap:3.1.3'
-    implementation 'org.springframework.cloud:spring-cloud-starter-config:3.1.3'
+//    implementation 'org.springframework.cloud:spring-cloud-starter'
+//    implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap:3.1.3'
+//    implementation 'org.springframework.cloud:spring-cloud-starter-config:3.1.3'
 
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'com.sun.jersey.contribs:jersey-apache-client4:1.19.4'
 
-    implementation project(':library:core')
+    implementation 'org.springframework.kafka:spring-kafka'
+//    implementation 'org.springframework.cloud:spring-cloud-stream'
 
+//    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+//    runtimeOnly 'com.h2database:h2'
 
+    runtimeOnly 'com.h2database:h2:1.4.200'
+
+    implementation project(':library:core')
+    implementation project(':library:manager')
 }
