--- a/service/manager/session/src/main/resources/application.yml
+++ b/service/manager/session/src/main/resources/application.yml
@@ -25,8 +25,24 @@ spring:
 
 
 
-  kafka:
-    bootstrap-servers: localhost:9092
+#  kafka:
+#    bootstrap-servers: localhost:9092
+
+  cloud:
+    function:
+      definition: consumer;producer;uppercase
+    stream:
+      kafka:
+        binder:
+          brokers: localhost:9092
+      bindings:
+        producer-out-0:
+          destination: first-topic
+        consumer-in-0:
+          destination: first-topic
+        uppercase-in-0:
+          destination: input
+
 
 
 #  cloud:
