--- a/service/manager/session/src/main/resources/application.yml
+++ b/service/manager/session/src/main/resources/application.yml
@@ -1,67 +1,30 @@
-server:
-  port: 8050
-
 spring:
-  application:
-    name: session-manager-service
-  main:
-    allow-bean-definition-overriding: true
-
-  datasource:
-    url: jdbc:h2:mem:testdb
-    username: sa
-    password: sa
-    driverClassName: org.h2.Driver
-  jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
-    properties:
-      hibernate:
-        globally_quoted_identifiers: true
-    show-sql: true
-  h2:
-    console:
-      enabled: true
-      #http://localhost:8050/h2-console/
-
-
-
   kafka:
     bootstrap-servers: localhost:9092
+    producer:
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+    consumer:
+      value-deserializer: org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
+      properties:
+        spring.deserializer.value.delegate.class: org.springframework.kafka.support.serializer.JsonDeserializer
+        spring.json.trusted.packages: com.nextfeed.service.manager.session.entities
+      enable-auto-commit: false
+      auto-offset-reset: earliest
 
 
-#  cloud:
-#    stream:
-#      function:
-#        bindings:  orderBuySupplier
-#      bindings:
-#        orderBuySupplier-out-0:
-#          destination: orders.buy
-#      kafka:
-#        bindings:
-#          orderBuySupplier-out-0:
-#            producer:
-#              configuration:
-#                key:
-#                  serializer: org.apache.kafka.common.serialization.LongSerializer
-
-
-
-
-management:
-  endpoints:
-    jmx:
-      exposure:
-        include: health,info,env,beans
-    web:
-      exposure:
-        include: health,info,env,beans,refresh
-
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: ${EUREKA_URI:http://localhost:8000/eureka}
-  instance:
-    instanceId: ${spring.application.name}:${random.value}
-    hostname: localhost
-    preferIpAddress: true
-
+#spring.kafka.consumer.properties.spring.json.trusted.packages=com.nextfeed.service.manager.session.entities
+##User defined Properties:
+nextfeed:
+  kafka:
+    test: myString
+    relays:
+      student-a:
+        beanName: rtkResultA
+        requestTopic: student-a
+        replyTopic: result-a
+        groupId: student-result-group-b
+      student-b:
+        beanName: rtkResultB
+        requestTopic: student-b
+        replyTopic: result-b
+        groupId: student-result-group-b
