--- a/service/manager/session/build.gradle
+++ b/service/manager/session/build.gradle
@@ -35,4 +35,6 @@ dependencies {
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+
+    implementation project(':library:core')
 }
