--- a/service/manager/session/src/main/resources/application.yml
+++ b/service/manager/session/src/main/resources/application.yml
@@ -7,24 +7,8 @@ spring:
       value-deserializer: org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
       properties:
         spring.deserializer.value.delegate.class: org.springframework.kafka.support.serializer.JsonDeserializer
-        spring.json.trusted.packages: com.nextfeed.service.manager.session.entities
+        spring.json.trusted.packages: com.nextfeed.library.core.service.entities
       enable-auto-commit: false
       auto-offset-reset: earliest
-
-
-#spring.kafka.consumer.properties.spring.json.trusted.packages=com.nextfeed.service.manager.session.entities
-##User defined Properties:
-nextfeed:
-  kafka:
-    test: myString
-    relays:
-      student-a:
-        beanName: rtkResultA
-        requestTopic: student-a
-        replyTopic: result-a
-        groupId: student-result-group-b
-      student-b:
-        beanName: rtkResultB
-        requestTopic: student-b
-        replyTopic: result-b
-        groupId: student-result-group-b
+  config:
+    import: classpath:config.yml
