--- a/service/manager/session/src/main/resources/application.yml
+++ b/service/manager/session/src/main/resources/application.yml
@@ -1,14 +1,13 @@
+server:
+  port: 0
+
 spring:
-  kafka:
-    bootstrap-servers: localhost:9092
-    producer:
-      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
-    consumer:
-      value-deserializer: org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
-      properties:
-        spring.deserializer.value.delegate.class: org.springframework.kafka.support.serializer.JsonDeserializer
-        spring.json.trusted.packages: com.nextfeed.library.core.service.entities
-      enable-auto-commit: false
-      auto-offset-reset: earliest
   config:
     import: classpath:config.yml
+
+  kafka:
+    consumer:
+      group-id: session-manager-service
+    admin:
+      client-id: session-manager-service-${server.port}
+
