--- a/service/user/build.gradle
+++ b/service/user/build.gradle
@@ -28,22 +28,27 @@ dependencyManagement {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter'
-    implementation 'org.springframework.cloud:spring-cloud-starter-task'
-    implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer'
+//    implementation 'org.springframework.cloud:spring-cloud-starter-task'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
-    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-hystrix:2.2.10.RELEASE'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'com.sun.jersey.contribs:jersey-apache-client4:1.19.4'
 
     implementation project(':library:core')
 
-    compileOnly 'org.projectlombok:lombok'
+//    compileOnly 'org.projectlombok:lombok'
 //    runtimeOnly 'com.h2database:h2'
-    annotationProcessor 'org.projectlombok:lombok'
+//    annotationProcessor 'org.projectlombok:lombok'
 
+//  kafka
+//    implementation 'org.springframework.boot:spring-boot-starter-web'
+//    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
+    implementation 'org.springframework.kafka:spring-kafka'
+//    implementation 'org.hibernate:hibernate-validator:7.0.5.Final'
+
+//  lombok
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
 
 }
