--- a/service/user/src/main/resources/application.yml
+++ b/service/user/src/main/resources/application.yml
@@ -28,5 +28,6 @@ eureka:
     serviceUrl:
       defaultZone: ${EUREKA_URI:http://localhost:8000/eureka}
   instance:
+    instanceId: ${spring.application.name}:${random.value}
     hostname: localhost
     preferIpAddress: true
