--- a/service/socket/session/build.gradle
+++ b/service/socket/session/build.gradle
@@ -21,6 +21,10 @@ ext {
     set('springCloudVersion', "2021.0.3")
 }
 
+test {
+    useJUnitPlatform()
+}
+
 dependencyManagement {
     imports {
         mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
@@ -43,6 +47,9 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
 
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
+
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'junit:junit:4.13.2'
 
     implementation project(':library:core')
     implementation project(':library:socket')
