--- a/service/manager/participant/src/main/resources/application.yml
+++ b/service/manager/participant/src/main/resources/application.yml
@@ -2,42 +2,32 @@ server:
   port: 8120
 
 spring:
+  config:
+    import:
+      - classpath:db.config.yml
+      - classpath:eureka.client.config.yml
   application:
     name: participant-manager-service
   main:
     allow-bean-definition-overriding: true
 
-  datasource:
-    url: jdbc:h2:mem:testdb
-    username: sa
-    password: sa
-    driverClassName: org.h2.Driver
-  jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
-    properties:
-      hibernate:
-        globally_quoted_identifiers: true
-    show-sql: true
-  h2:
-    console:
-      enabled: true
-      #http://localhost:8050/h2-console/
+#  datasource:
+#    url: jdbc:h2:file:~/NEXTFEED_DB;DB_CLOSE_ON_EXIT=FALSE
+#    username: sa
+#    password:
+#    driverClassName: org.h2.Driver
+#  jpa:
+#      database-platform: org.hibernate.dialect.H2Dialect
+#      properties:
+#        hibernate:
+#          globally_quoted_identifiers: true
+#      show-sql: true
+#      hibernate:
+#        ddl-auto: update
+#    h2:
+#      console:
+#        enabled: true
+#        #http://localhost:8050/h2-console/
 
-management:
-  endpoints:
-    jmx:
-      exposure:
-        include: health,info,env,beans
-    web:
-      exposure:
-        include: health,info,env,beans,refresh
 
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: ${EUREKA_URI:http://localhost:8000/eureka}
-  instance:
-    instanceId: ${spring.application.name}:${random.value}
-    hostname: localhost
-    preferIpAddress: true
 
