--- a/service/manager/session/src/main/resources/application.yml
+++ b/service/manager/session/src/main/resources/application.yml
@@ -2,42 +2,24 @@ server:
   port: 8110
 
 spring:
+  config:
+    import:
+#      - classpath:db.config.yml
+      - eureka.client.config.yml
   application:
     name: session-manager-service
   main:
     allow-bean-definition-overriding: true
 
+
   datasource:
-    url: jdbc:h2:mem:testdb
-    username: sa
-    password: sa
-    driverClassName: org.h2.Driver
+    url: jdbc:postgresql://localhost:5432/nextfeed
+    username: root
+    password: pw
+    driverClassName: org.postgresql.Driver
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
-    properties:
-      hibernate:
-        globally_quoted_identifiers: true
+    defer-datasource-initialization: true
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
     show-sql: true
-  h2:
-    console:
-      enabled: true
-      #http://localhost:8050/h2-console/
-
-management:
-  endpoints:
-    jmx:
-      exposure:
-        include: health,info,env,beans
-    web:
-      exposure:
-        include: health,info,env,beans,refresh
-
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: ${EUREKA_URI:http://localhost:8000/eureka}
-  instance:
-    instanceId: ${spring.application.name}:${random.value}
-    hostname: localhost
-    preferIpAddress: true
-
+    hibernate:
+      ddl-auto: update
