--- a/service/manager/participant/build.gradle
+++ b/service/manager/participant/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 
-//    runtimeOnly 'com.h2database:h2'
+    runtimeOnly 'org.postgresql:postgresql'
 
     implementation project(':library:core')
     implementation project(':library:manager')
