--- a/service/manager/session/src/main/resources/application.yml
+++ b/service/manager/session/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 spring:
   config:
     import:
-#      - classpath:db.config.yml
+      - classpath:db.config.yml
       - eureka.client.config.yml
   application:
     name: session-manager-service
@@ -12,14 +12,4 @@ spring:
     allow-bean-definition-overriding: true
 
 
-  datasource:
-    url: jdbc:postgresql://localhost:5432/nextfeed
-    username: root
-    password: pw
-    driverClassName: org.postgresql.Driver
-  jpa:
-    defer-datasource-initialization: true
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
-    show-sql: true
-    hibernate:
-      ddl-auto: update
+
