--- a/service/manager/question/src/main/resources/application.yml
+++ b/service/manager/question/src/main/resources/application.yml
@@ -1,15 +1,12 @@
 server:
-  port: 8140
+  port: 8130
 
 spring:
   config:
     import:
       - classpath:db.config.yml
-      - eureka.client.config.yml
+      - classpath:eureka.client.config.yml
   application:
-    name: session-manager-service
+    name: question-manager-service
   main:
     allow-bean-definition-overriding: true
-
-
-
