--- a/settings.gradle
+++ b/settings.gradle
@@ -20,6 +20,10 @@ include 'service:socket:session'
 //Manager
 include 'service:manager:session'
 include 'service:manager:participant'
+include 'service:manager:question'
+include 'service:manager:mood'
+include 'service:manager:survey'
+include 'service:manager:surveyTemplate'
 
 
 
