--- a/settings.gradle
+++ b/settings.gradle
@@ -15,7 +15,9 @@ include 'service:externalService:webclient'
 include 'service:externalService:survey'
 include 'service:externalService:user'
 
+//Session
 include 'service:socket:session'
+include 'service:socket:question'
 
 //Manager
 include 'service:manager:session'
