--- a/service/externalService/survey/src/main/resources/application.yml
+++ b/service/externalService/survey/src/main/resources/application.yml
@@ -1,63 +1,11 @@
 server:
-  port: 8010
+  port: 8030
 
 spring:
+  config:
+    import:
+      - classpath:eureka.client.config.yml
   application:
     name: survey-service
-
   main:
     allow-bean-definition-overriding: true
-
-
-#  config:
-#
-#    import: http://localhost:8040/
-#    import: optional:configserver:http://localhost:8040/
-#    import: http://localhost:8040/
-  cloud:
-    config:
-      discovery:
-        service-id: config-service
-        enabled: true
-      uri: http://localhost:8040/
-
-
-
-#  cloud:
-
-#    config:
-
-#      enabled: true
-#      allow-override: true
-#      uri: ${SPRING_CONFIG_URI:http://localhost:8040}
-#      override-system-properties: False
-#      discovery:
-#        service-id: "config-service"
-#        enabled: true
-#      fail-fast: true
-#debug: true
-
-feign:
-  client:
-    refresh-enabled: true
-  circuitbreaker:
-    enabled: true
-
-management:
-  endpoints:
-    jmx:
-      exposure:
-        include: health,info,env,beans
-    web:
-      exposure:
-        include: health,info,env,beans,refresh
-
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: ${EUREKA_URI:http://localhost:8000/eureka}
-  instance:
-    instanceId: ${spring.application.name}:${random.value}
-    hostname: localhost
-    preferIpAddress: true
-
