--- a/service/environment/gateway/build.gradle
+++ b/service/environment/gateway/build.gradle
@@ -38,6 +38,12 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-gateway:3.1.3'
 //    implementation 'org.springframework.boot:spring-boot-starter-web'
 
+//    implementation('org.springframework.cloud:spring-cloud-starter-oauth2') {
+//        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
+//    }
+//    implementation 'org.springframework.boot:spring-boot-starter-security'
+//    implementation 'io.jsonwebtoken:jjwt:0.9.1'
+
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
