--- a/service/manager/session/build.gradle
+++ b/service/manager/session/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'com.sun.jersey.contribs:jersey-apache-client4:1.19.4'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-
+    implementation 'org.springframework.boot:spring-boot-starter-cache'
 
 
 
