--- a/service/environment/gateway/build.gradle
+++ b/service/environment/gateway/build.gradle
@@ -2,51 +2,27 @@ plugins {
     id 'org.springframework.boot' version '2.7.1'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
+    id 'com.palantir.docker' version '0.33.0'
 }
 
 group = 'com.nextfeed'
 version = '0.0.1-SNAPSHOT'
-targetCompatibility = JavaVersion.VERSION_17
+ext.serverPort = 8001
 
-compileJava   {
-    sourceCompatibility = '17'
-    targetCompatibility = '17'
-}
-
-repositories {
-    mavenCentral()
-}
-
-ext {
-    set('springCloudVersion', "2021.0.3")
-}
-
-dependencyManagement {
-    imports {
-        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
-    }
-}
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.cloud:spring-cloud-starter-task'
     implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
-//    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
-//    implementation 'org.springframework.boot:spring-boot-starter-web'
+
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.cloud:spring-cloud-starter-gateway:3.1.3'
-//    implementation 'org.springframework.boot:spring-boot-starter-web'
-
-//    implementation('org.springframework.cloud:spring-cloud-starter-oauth2') {
-//        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
-//    }
-//    implementation 'org.springframework.boot:spring-boot-starter-security'
-//    implementation 'io.jsonwebtoken:jjwt:0.9.1'
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
 
-//    implementation project(':library:core')
-
 }
+
+apply from: '../../../gradleSettings/service-settings.gradle'
+apply from: '../../../gradleSettings/docker-settings.gradle'
