--- a/service/manager/survey/build.gradle
+++ b/service/manager/survey/build.gradle
@@ -2,29 +2,12 @@ plugins {
     id 'org.springframework.boot' version '2.7.1'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
+    id 'com.palantir.docker' version '0.33.0'
 }
 
 group = 'com.nextfeed'
 version = '0.0.1-SNAPSHOT'
-
-compileJava   {
-    sourceCompatibility = '17'
-    targetCompatibility = '17'
-}
-
-repositories {
-    mavenCentral()
-}
-
-ext {
-    set('springCloudVersion', "2021.0.3")
-}
-
-dependencyManagement {
-    imports {
-        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
-    }
-}
+ext.dockerType = "manager"
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
@@ -45,3 +28,6 @@ dependencies {
     implementation project(':library:core')
     implementation project(':library:manager')
 }
+
+apply from: '../../../gradleSettings/service-settings.gradle'
+apply from: '../../../gradleSettings/docker-settings.gradle'
