create docker image setup

--- a/service/manager/participant/build.gradle
+++ b/service/manager/participant/build.gradle
@@ -8,7 +8,7 @@ plugins {
 group = 'com.nextfeed'
 version = '0.0.1-SNAPSHOT'
 ext.dockerType = "manager"
-
+ext.serviceType = "manager-service"
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
