--- a/gradleSettings/docker/default/Dockerfile
+++ b/gradleSettings/docker/default/Dockerfile
@@ -2,5 +2,7 @@ FROM openjdk:17
 LABEL maintainer "lecturefeed@gmail.com"
 EXPOSE <%=port%>
 COPY <%=name%>-<%=version%>.jar app.jar
-#CMD ["java","-jar -D\"spring.profiles.active=default,prod\"","app.jar"]
-CMD ["java", "-jar", "app.jar", "--spring.profiles.active=default,prod"]
+ENV EUREKA_HOST eureka
+ENV EUREKA_PORT 8000
+
+CMD java -jar app.jar --spring.profiles.active=default,prod  --nextfeed.config.eureka.hostname=$EUREKA_HOST --nextfeed.config.eureka.port=$EUREKA_PORT
