--- a/service/environment/gateway/src/main/resources/application.yml
+++ b/service/environment/gateway/src/main/resources/application.yml
@@ -1,3 +1,9 @@
+nextfeed:
+  config:
+    eureka:
+      hostname: localhost
+      port: 8000
+
 server:
   port: 8001
 
@@ -62,9 +68,9 @@ spring:
 
 eureka:
   client:
-    registry-fetch-interval-seconds: 5
+    registry-fetch-interval-seconds: 10
     serviceUrl:
-      defaultZone: ${EUREKA_URI:http://localhost:8000/eureka}
+      defaultZone: ${EUREKA_URI:http://${nextfeed.config.eureka.hostname}:${nextfeed.config.eureka.port}/eureka}
   instance:
     instanceId: ${spring.application.name}:${random.value}
     hostname: localhost
