--- a/gradleSettings/docker/default/Dockerfile
+++ b/gradleSettings/docker/default/Dockerfile
@@ -2,5 +2,5 @@ FROM openjdk:17
 LABEL maintainer "lecturefeed@gmail.com"
 EXPOSE <%=port%>
 COPY <%=name%>-<%=version%>.jar app.jar
-
-CMD java -jar app.jar --spring.profiles.active=default,prod
+ENV LOGGING_METRICS=false
+CMD java -jar app.jar --spring.profiles.active=default,prod --nextfeed.metrics.enabled=$LOGGING_METRICS
