--- a/settings.gradle
+++ b/settings.gradle
@@ -6,6 +6,10 @@ include 'library:manager'
 include 'library:socket'
 include 'library:security'
 
+//test
+include 'service:test:test'
+include 'service:test:gateway'
+
 
 //External Service
 include 'service:externalService:webclient'
@@ -14,7 +18,6 @@ include 'service:externalService:question'
 include 'service:externalService:session'
 include 'service:externalService:survey'
 include 'service:externalService:authorization'
-include 'service:externalService:test'
 
 //Session
 include 'service:socket:mood'
