--- a/service/environment/gateway/src/main/resources/application.yml
+++ b/service/environment/gateway/src/main/resources/application.yml
@@ -9,6 +9,8 @@ spring:
     name: gateway-service
   cloud:
     gateway:
+      metrics:
+        enabled: true
       discovery:
         locator:
           enabled: false
@@ -26,40 +28,61 @@ spring:
 
       routes:
         - id: authorization-service
-          uri: http://localhost:8010
+          uri: http://authorization-external-service.nextfeed:8010
           predicates:
             - Path=/api/authorization-service/**
         - id: question-service
-          uri: http://localhost:8020
+          uri: http://question-external-service.nextfeed:8020
           predicates:
             - Path=/api/question-service/**
         - id: session-service
-          uri: http://localhost:8030
+          uri: http://session-external-service.nextfeed:8030
           predicates:
             - Path=/api/session-service/**
         - id: survey-service
-          uri: http://localhost:8040
+          uri: http://survey-external-service.nextfeed:8040
           predicates:
             - Path=/api/survey-service/**
 
 
         - id: mood-socket-service
-          uri: http://localhost:8210
+          uri: http://mood-socket-service.nextfeed:8210
           predicates:
             - Path=/socket/mood-socket/**
         - id: session-socket-service
-          uri: http://localhost:8230
+          uri: http://session-socket-service.nextfeed:8230
           predicates:
             - Path=/socket/session-socket/**
         - id: survey-socket-service
-          uri: http://localhost:8240
+          uri: http://survey-socket-service.nextfeed:8240
           predicates:
             - Path=/socket/survey-socket/**
         - id: question-socket-service
-          uri: http://localhost:8220
+          uri: http://question-socket-service.nextfeed:8220
           predicates:
             - Path=/socket/question-socket/**
 
+        - id: test-service
+          uri: http://test-service.nextfeed:80
+          predicates:
+            - Path=/test/**
+
+
+
+
+management:
+  endpoints:
+    gateway:
+      enabled: true
+    jmx:
+      exposure:
+        include: health,info,env,beans
+    web:
+      exposure:
+        include: health,info,env,beans,prometheus,gateway,metrics
+    metrics:
+      enabled:
+        all: true
 
 
 
