--- a/service/test/test/build.gradle
+++ b/service/test/test/build.gradle
@@ -7,6 +7,7 @@ plugins {
 
 group = 'com.nextfeed'
 version = '0.0.1-SNAPSHOT'
+ext.serviceType = "service"
 ext.serverPort = 8080
 
 compileJava   {
