--- a/service/manager/user/build.gradle
+++ b/service/manager/user/build.gradle
@@ -23,6 +23,8 @@ dependencies {
     implementation 'net.devh:grpc-server-spring-boot-starter:2.13.1.RELEASE'
     implementation 'net.devh:grpc-client-spring-boot-starter:2.13.1.RELEASE'
 
+    implementation 'org.springframework.security:spring-security-crypto:5.7.3'
+
     implementation project(':library:core')
 }
 
