--- a/service/repository/participant/src/main/resources/application.yml
+++ b/service/repository/participant/src/main/resources/application.yml
@@ -26,3 +26,7 @@ spring:
 
 server:
   port: ${nextfeed.service.participant-repository-service.port}
+
+grpc:
+  server:
+    port: ${nextfeed.service.participant-repository-service.grpc-port}
