--- a/service/repository/question/src/main/resources/application.yml
+++ b/service/repository/question/src/main/resources/application.yml
@@ -27,3 +27,7 @@ spring:
 
 server:
   port: ${nextfeed.service.question-repository-service.port}
+
+grpc:
+  server:
+    port: ${nextfeed.service.question-repository-service.grpc-port}
