--- a/service/manager/participant/src/main/resources/application.yml
+++ b/service/manager/participant/src/main/resources/application.yml
@@ -9,3 +9,7 @@ spring:
 
 server:
   port: ${nextfeed.service.participant-manager-service.port}
+
+grpc:
+  server:
+    port: ${nextfeed.service.participant-manager-service.grpc-port}
