--- a/service/socket/survey/src/main/resources/application.yml
+++ b/service/socket/survey/src/main/resources/application.yml
@@ -1,6 +1,7 @@
 spring:
   config:
     import:
+      - classpath:security.config.yml
       - classpath:nextfeed.config.yml
   application:
     name: survey-socket-service
@@ -15,3 +16,6 @@ nextfeed:
     endpoint:
       prefix: "/socket/survey-socket"
 
+grpc:
+  server:
+    port: ${nextfeed.service.survey-socket-service.grpc-port}
