--- a/gradleSettings/docker/default/Dockerfile
+++ b/gradleSettings/docker/default/Dockerfile
@@ -1,6 +1,6 @@
 FROM openjdk:17
 LABEL maintainer "lecturefeed@gmail.com"
-EXPOSE <%=port%>
+EXPOSE <%=ports%>
 COPY <%=name%>-<%=version%>.jar app.jar
 ENV LOGGING_METRICS=false
 CMD java -jar app.jar --spring.profiles.active=default,prod --nextfeed.metrics.enabled=$LOGGING_METRICS
