--- a/service/manager/participant/build.gradle
+++ b/service/manager/participant/build.gradle
@@ -8,7 +8,7 @@ plugins {
 group = 'com.nextfeed'
 version = '0.0.1-SNAPSHOT'
 ext.serviceType = "manager-service"
-ext.serverPort = 8120
+ext.serverPort = "8120 8125"
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
