--- a/gradleSettings/docker/simple/Dockerfile
+++ b/gradleSettings/docker/simple/Dockerfile
@@ -1,6 +1,6 @@
 FROM openjdk:17
 LABEL maintainer "lecturefeed@gmail.com"
-EXPOSE <%=port%>
+EXPOSE <%=ports%>
 COPY <%=name%>-<%=version%>.jar app.jar
 
 CMD java -jar app.jar
