--- a/service/externalService/authorization/build.gradle
+++ b/service/externalService/authorization/build.gradle
@@ -8,7 +8,7 @@ plugins {
 group = 'com.nextfeed'
 version = '0.0.1-SNAPSHOT'
 ext.serviceType = "external-service"
-ext.serverPort = 8010
+ext.serverPort = "8010"
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
