--- a/service/socket/mood/build.gradle
+++ b/service/socket/mood/build.gradle
@@ -8,7 +8,7 @@ plugins {
 group = 'com.nextfeed'
 version = '0.0.1-SNAPSHOT'
 ext.serviceType = "socket-service"
-ext.serverPort = 8210
+ext.serverPort = "8210 8215"
 
 
 dependencies {
