--- a/service/socket/survey/build.gradle
+++ b/service/socket/survey/build.gradle
@@ -8,7 +8,7 @@ plugins {
 group = 'com.nextfeed'
 version = '0.0.1-SNAPSHOT'
 ext.serviceType = "socket-service"
-ext.serverPort = 8240
+ext.serverPort = "8240 8245"
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
