--- a/service/generic/authorization/build.gradle
+++ b/service/generic/authorization/build.gradle
@@ -7,8 +7,8 @@ plugins {
 
 group = 'com.nextfeed'
 version = '0.0.1-SNAPSHOT'
-ext.serviceType = "external-service"
-ext.serverPort = "8010"
+ext.serviceType = "service"
+ext.serverPort = "8050 8055"
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
